refactor(vod): move playback flow into controller